// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list grid list 1`] = `
.pf-c-list {
  display: block;
  padding-left: 1.5rem;
}
.pf-c-list {
  display: block;
  padding-left: 1.5rem;
}

<List
  className=""
  variant="grid"
>
  <ul
    className="pf-c-list"
  >
    <ListItems>
      <List
        className=""
        variant={null}
      >
        <ul
          className="pf-c-list"
        >
          <ListItem>
            <li>
              First
            </li>
          </ListItem>
          <ListItem>
            <li>
              Second
            </li>
          </ListItem>
          <ListItem>
            <li>
              Third
            </li>
          </ListItem>
        </ul>
      </List>
    </ListItems>
  </ul>
</List>
`;

exports[`list inline list 1`] = `
.pf-c-list {
  display: block;
  padding-left: 1.5rem;
}
.pf-c-list.pf-m-inline {
  display: flex;
  padding-left: 1.5rem;
  flex-wrap: wrap;
}

<List
  className=""
  variant="inline"
>
  <ul
    className="pf-c-list pf-m-inline"
  >
    <ListItems>
      <List
        className=""
        variant={null}
      >
        <ul
          className="pf-c-list"
        >
          <ListItem>
            <li>
              First
            </li>
          </ListItem>
          <ListItem>
            <li>
              Second
            </li>
          </ListItem>
          <ListItem>
            <li>
              Third
            </li>
          </ListItem>
        </ul>
      </List>
    </ListItems>
  </ul>
</List>
`;

exports[`list simple list 1`] = `
.pf-c-list {
  display: block;
  padding-left: 1.5rem;
}
.pf-c-list {
  display: block;
  padding-left: 1.5rem;
}

<List
  className=""
  variant={null}
>
  <ul
    className="pf-c-list"
  >
    <ListItems>
      <List
        className=""
        variant={null}
      >
        <ul
          className="pf-c-list"
        >
          <ListItem>
            <li>
              First
            </li>
          </ListItem>
          <ListItem>
            <li>
              Second
            </li>
          </ListItem>
          <ListItem>
            <li>
              Third
            </li>
          </ListItem>
        </ul>
      </List>
    </ListItems>
  </ul>
</List>
`;
